--- a/promethee/WebContent/WEB-INF/web.xml
+++ b/promethee/WebContent/WEB-INF/web.xml
@@ -23,6 +23,10 @@
   	<param-value>Development</param-value>
   </context-param>
   <context-param>
+  	<param-name>facelets.LIBRARIES</param-name>
+  	<param-value>/WEB-INF/corejsf.taglib.xml</param-value>
+  </context-param>
+  <context-param>
     <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
     <param-value>resources.application</param-value>
   </context-param>
